# topfs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
packaging/: README.md  build-all.sh  common.sh
packaging/brew/: topfs.rb  update-formula.sh
packaging/deb/: build-deb.sh
packaging/rpm/: build-rpm.sh  topfs.spec
src/: main.rs
