[package]
name = "topfs"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ctrlc = "3"
dashmap = "6"
jwalk = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
